# CP

./: CMakeLists.txt
Data/: Account.txt  Article.txt  Author.txt  InitialNum.txt  Journal.txt  Publisher.txt
reCode/: Bao.cpp  Bao.h  List.cpp  List.h  NXB.cpp  NXB.h  TacGia.cpp  TacGia.h  TapChi.cpp  TapChi.h  hamKhac.cpp  hamKhac.h  main.cpp  menu.cpp  menu.h
reCode/x64/Debug/Newest2.tlog/: Newest2.lastbuildstate
